Categories page added

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="common.css">
-    <title>Home</title>
+    <title>GameScope</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <a href="index.html">Home</a>
         </div>
         <div class="categories">
-            <a href="">Categories</a>
+            <a href="categories.html">Categories</a>
         </div>
         <div class="about">
             <a href="about.html">About</a>
