sprint 2 without comments commit

--- a/categories.html
+++ b/categories.html
@@ -8,14 +8,13 @@
 </head>
 
 <body>
-    <div class="header">
-
+    <header>
         <div class="name">
-            <h1>GameScope</h1>
-            <p><b>Description</b></p>
+            <h1 >GameScope</h1>
+            <p ><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b></p>
         </div>
+    </header>
 
-    </div>
     <div class="navBar">
         <div class="home">
             <a href="index.html">Home</a>
@@ -30,9 +29,10 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div class="main">
+
+    <main>
         <div class="ad1">
-            <img src="ad.png" class="ad1">
+            <a href=""><img src="ad.png" ></a>
         </div>
         <div class="content">
             <h2 class="title">Categories</h2>
@@ -70,12 +70,23 @@
 
         </div>
         <div class="ad2">
-            <img src="ad.png" class="ad2">
+            <a href=""><img src="ad.png" ></a>
         </div>
-    </div>
-    <div class="footer">
+    </main>
 
-    </div>
+   
+    <footer>
+        <div class="sponsor">
+            <h2>Spon</h2>
+            <p>something catchy</p>
+        </div>
+        <div class="social">
+            <a href=""><img src="insta.png" alt="instagram" class="socialPic"></a>
+            <a href=""><img src="facebook.png" alt="facebook" class="socialPic"></a>
+            <a href=""><img src="x.jpg" alt="X" class="socialPic"></a>
+            <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a>
+        </div>
+    </footer>
 </body>
 
 
