--- a/categories.html
+++ b/categories.html
@@ -1,93 +1,89 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
-<head>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="category.css">
-    <title>GameScope</title>
+<head> <!-- Head section containing metadata and links to external resources -->
+    <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
+    <link rel="stylesheet" href="category.css"> <!-- Link to category-specific stylesheet -->
+    <title>GameScope</title> <!-- Title of the webpage -->
 </head>
 
-<body>
-    <header>
-        <div class="name">
-            <h1 >GameScope</h1>
-            <p ><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b></p>
+<body> <!-- Body section of the webpage -->
+    <header> <!-- Header section containing website name and slogan -->
+        <div class="name"> <!-- Division for website name and slogan -->
+            <h1>GameScope</h1> <!-- Main heading of the website -->
+            <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b></p> <!-- Slogan -->
         </div>
     </header>
 
-    <div class="navBar">
-        <div class="home">
-            <a href="index.html">Home</a>
+    <div class="navBar"> <!-- Navigation bar section -->
+        <div class="home"> <!-- Home link -->
+            <a href="index.html">Home</a> <!-- Link to home page -->
         </div>
-        <div class="categories">
-            <a href="">Categories</a>
+        <div class="categories"> <!-- Categories link -->
+            <a href="">Categories</a> <!-- Placeholder link to categories page -->
         </div>
-        <div class="about">
-            <a href="about.html">About</a>
+        <div class="about"> <!-- About link -->
+            <a href="about.html">About</a> <!-- Link to about page -->
         </div>
-        <div class="contact">
-            <a href="contact.html">Contact</a>
+        <div class="contact"> <!-- Contact link -->
+            <a href="contact.html">Contact</a> <!-- Link to contact page -->
         </div>
     </div>
 
-    <main>
-        <div class="ad1">
-            <a href=""><img src="ad.png" ></a>
+    <main> <!-- Main content section of the webpage -->
+        <div class="ad1"> <!-- Advertisement section 1 -->
+            <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
-        <div class="content">
-            <h2 class="title">Categories</h2>
-            <div class="innerContent">
-                <div class="list">
+        <div class="content"> <!-- Content section -->
+            <h2 class="title">Categories</h2> <!-- Heading for categories -->
+            <div class="innerContent"> <!-- Inner content division -->
+                <div class="list"> <!-- List of categories -->
                     <ul>
-                        <li> <a href="" class="inText">Horror</a></li>
-                        <li> <a href="" class="inText">Simulator</a></li>
-                        <li><a href="" class="inText">Arcade</a></li>
-                        <li><a href="" class="inText">Shooter</a></li>
-                        <li><a href="" class="inText">Puzzle</a></li>
+                        <li><a href="" class="inText">Horror</a></li> <!-- Link to Horror category -->
+                        <li><a href="" class="inText">Simulator</a></li> <!-- Link to Simulator category -->
+                        <li><a href="" class="inText">Arcade</a></li> <!-- Link to Arcade category -->
+                        <li><a href="" class="inText">Shooter</a></li> <!-- Link to Shooter category -->
+                        <li><a href="" class="inText">Puzzle</a></li> <!-- Link to Puzzle category -->
                     </ul>
                 </div>
-                <div class="table">
+                <div class="table"> <!-- Table displaying category images -->
                     <table>
                         <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 1 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 2 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 3 -->
                         </tr>
                         <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 4 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 5 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 6 -->
                         </tr>
                         <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
-                            <td><img src="header.jpg" alt="" class="imgs"></td>
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 7 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 8 -->
+                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 9 -->
                         </tr>
                     </table>
                 </div>
             </div>
-
         </div>
-        <div class="ad2">
-            <a href=""><img src="ad.png" ></a>
+        <div class="ad2"> <!-- Advertisement section 2 -->
+            <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
     </main>
 
-   
-    <footer>
-        <div class="sponsor">
-            <h2>Spon</h2>
-            <p>something catchy</p>
+    <footer> <!-- Footer section -->
+        <div class="sponsor"> <!-- Sponsor section -->
+            <h2>Spon</h2> <!-- Sponsor heading -->
+            <p>something catchy</p> <!-- Sponsor description -->
         </div>
-        <div class="social">
-            <a href=""><img src="insta.png" alt="instagram" class="socialPic"></a>
-            <a href=""><img src="facebook.png" alt="facebook" class="socialPic"></a>
-            <a href=""><img src="x.jpg" alt="X" class="socialPic"></a>
-            <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a>
+        <div class="social"> <!-- Social media links -->
+            <a href=""><img src="insta.png" alt="instagram" class="socialPic"></a> <!-- Instagram link -->
+            <a href=""><img src="facebook.png" alt="facebook" class="socialPic"></a> <!-- Facebook link -->
+            <a href=""><img src="x.jpg" alt="X" class="socialPic"></a> <!-- X link -->
+            <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
+
 </body>
-
-
 </html>
