pre sprint 3 commit

--- a/DarkestDungeon.html
+++ b/DarkestDungeon.html
@@ -1,9 +1,17 @@
+<!--Firuza Rahimova 20050141056
+https://firagimova.github.io/GameScope/index.html
+
+Murat Ergin 18050111038
+https://muratterginn.github.io/GameScope/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
+    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
 </head>
 
 <body>
@@ -34,13 +42,29 @@
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Contact</h2> <!-- Heading for contact -->
+            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore itaque corporis! Eum eaque modi velit, maiores odio placeat magnam! 
-                Debitis quidem veritatis architecto, consectetur quia esse officia ut distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad voluptatibus
-                 voluptatum sed architecto explicabo? Praesentium eum nesciunt possimus facere sit! Deleniti, tempore? Harum ratione illo nihil nostrum, ea earum. Culpa? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit dignissimos molestiae enim delectus temporibus corporis. Molestias adipisci quasi doloribus
-                 delectus, explicabo fugit earum aperiam perferendis veniam aliquam eaque in!</p>
+                <div class="info">
+                    <p><b>Release year:</b> 2015</p>
+                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
+                    <p><b>Genre:</b> roguelike, strategy</p>
+                    <p><b>Rate(Steam):</b> 9/10</p>
+                </div>
+                <article><!-- Article containing text -->
+                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
+                    of adventuring.
+                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
+                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
+                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
+                    and starvation, which affect their characters' mental states and can lead to significant in-game
+                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
+                    difficulty, emphasizing strategy and careful management of resources and personnel.
+                </article>
+            </div>
+            <div class="images">
+                <img src="DDicon.jpg" alt="icon">
+                <img src="DDp1.jpg" alt="picture1">
+                <img src="DDp2.png" alt="picture2">
             </div>
         </div>
         <div class="ad2"> <!-- Advertisement section 2 -->
@@ -48,7 +72,6 @@
         </div>
     </main>
 
-    
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
             <h2>Spon</h2> <!-- Sponsor heading -->
@@ -61,6 +84,7 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
+
 </body>
 
 </html>
