--- a/Horror.html
+++ b/Horror.html
@@ -4,7 +4,7 @@
 <head> <!-- Head section containing metadata and links to external resources -->
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="category.css"> <!-- Link to category-specific stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <title>Horror</title> <!-- Title of the webpage -->
 </head>
 
 <body> <!-- Body section of the webpage -->
@@ -20,7 +20,7 @@
             <a href="index.html">Home</a> <!-- Link to home page -->
         </div>
         <div class="categories"> <!-- Categories link -->
-            <a href="">Categories</a> <!-- Placeholder link to categories page -->
+            <a href="RolePlaying.html">Categories</a> <!-- Placeholder link to categories page -->
         </div>
         <div class="about"> <!-- About link -->
             <a href="about.html">About</a> <!-- Link to about page -->
@@ -39,29 +39,17 @@
             <div class="innerContent"> <!-- Inner content division -->
                 <div class="list"> <!-- List of categories -->
                     <ul>
-                        <li><a href="" class="inText">Horror</a></li> <!-- Link to Horror category -->
-                        <li><a href="" class="inText">Simulator</a></li> <!-- Link to Simulator category -->
-                        <li><a href="" class="inText">Arcade</a></li> <!-- Link to Arcade category -->
-                        <li><a href="" class="inText">Shooter</a></li> <!-- Link to Shooter category -->
-                        <li><a href="" class="inText">Puzzle</a></li> <!-- Link to Puzzle category -->
-                    </ul>
+                        <li><a href="RolePlaying.html" class="inText">Role Playing</a></li> <!-- Link to Horror category -->
+                        <li><a href="Simulation.html" class="inText">Simulation</a></li> <!-- Link to Simulator category -->
+                        <li><a href="Horror.html" class="inText">Horror</a></li> <!-- Link to Arcade category -->
+                        <li><a href="Shooter.html" class="inText">Shooter</a></li> <!-- Link to Shooter category -->
                 </div>
                 <div class="table"> <!-- Table displaying category images -->
                     <table>
                         <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 1 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 2 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 3 -->
-                        </tr>
-                        <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 4 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 5 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 6 -->
-                        </tr>
-                        <tr>
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 7 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 8 -->
-                            <td><img src="header.jpg" alt="" class="imgs"></td> <!-- Image 9 -->
+                            <td><a href="LayersOfFear.html"><img src="LOFicon.jpg" alt="" class="imgs"></a></td> <!-- Image 1 -->
+                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
+                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
                         </tr>
                     </table>
                 </div>
