--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a href="index.html">Home</a> <!-- Link to home page -->
         </div>
         <div class="categories"> <!-- Categories link -->
-            <a href="categories.html">Categories</a> <!-- Link to categories page -->
+            <a href="RolePlaying.html">Categories</a> <!-- Link to categories page -->
         </div>
         <div class="about"> <!-- About link -->
             <a href="about.html">About</a> <!-- Link to about page -->
