--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+
+<!--Firuza Rahimova 20050141056
+https://firagimova.github.io/GameScope/index.html
+
+Murat Ergin 18050111038
+https://muratterginn.github.io/GameScope/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +27,7 @@
             <a href="index.html">Home</a> <!-- Link to home page -->
         </div>
         <div class="categories"> <!-- Categories link -->
-            <a href="categories.html">Categories</a> <!-- Link to categories page -->
+            <a href="RolePlaying.html">Categories</a> <!-- Link to categories page -->
         </div>
         <div class="about"> <!-- About link -->
             <a href="about.html">About</a> <!-- Link to about page -->
