--- a/Doom.html
+++ b/Doom.html
@@ -1,9 +1,17 @@
+<!--Firuza Rahimova 20050141056
+https://firagimova.github.io/GameScope/index.html
+
+Murat Ergin 18050111038
+https://muratterginn.github.io/GameScope/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
+    <title>DOOM</title> <!-- Title of the webpage -->
 </head>
 
 <body>
@@ -34,13 +42,32 @@
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Contact</h2> <!-- Heading for contact -->
+            <h2 class="title">DOOM</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore itaque corporis! Eum eaque modi velit, maiores odio placeat magnam! 
-                Debitis quidem veritatis architecto, consectetur quia esse officia ut distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad voluptatibus
-                 voluptatum sed architecto explicabo? Praesentium eum nesciunt possimus facere sit! Deleniti, tempore? Harum ratione illo nihil nostrum, ea earum. Culpa? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit dignissimos molestiae enim delectus temporibus corporis. Molestias adipisci quasi doloribus
-                 delectus, explicabo fugit earum aperiam perferendis veniam aliquam eaque in!</p>
+                <div class="info">
+                    <p><b>Release year:</b> 1993</p>
+                    <p><b>Publisher:</b><a href="https://www.idsoftware.com/"> id Software</a></p>
+                    <p><b>Genre:</b> FPS</p>
+                    <p><b>Rate(Steam):</b> 10/10</p>
+                </div>
+                <article><!-- Article containing text -->
+
+                    "DOOM" is an iconic first-person shooter video game that revolutionized the genre with its
+                    fast-paced action and advanced graphics when it was first released by id Software in 1993. The
+                    game's premise is simple yet thrilling: players take on the role of an unnamed space marine,
+                    popularly known as Doomguy, who battles demonic forces from Hell unleashed by a failed scientific
+                    experiment on the Martian moons. With its intense gameplay, players navigate labyrinthine levels,
+                    utilizing an arsenal of powerful weapons to combat a variety of demons. DOOM's legacy lies not only
+                    in its adrenaline-pumping gameplay and innovative 3D graphics but also in its wide modding community
+                    and introduction of deathmatch modes, setting the foundation for many future multiplayer gaming
+                    experiences. The game is acclaimed for its groundbreaking approach and remains a beloved classic in
+                    the gaming community, influencing countless other games in the shooter genre.
+                </article>
+            </div>
+            <div class="images">
+                <img src="Dicon.jpg" alt="icon">
+                <img src="Dp1.jpg" alt="picture1">
+                <img src="Dp2.jpg" alt="picture2">
             </div>
         </div>
         <div class="ad2"> <!-- Advertisement section 2 -->
@@ -48,7 +75,6 @@
         </div>
     </main>
 
-    
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
             <h2>Spon</h2> <!-- Sponsor heading -->
@@ -61,6 +87,7 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
+
 </body>
 
 </html>
