--- a/HouseFlipper.html
+++ b/HouseFlipper.html
@@ -1,9 +1,17 @@
+<!--Firuza Rahimova 20050141056
+https://firagimova.github.io/GameScope/index.html
+
+Murat Ergin 18050111038
+https://muratterginn.github.io/GameScope/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
+    <title>House Flipper</title> <!-- Title of the webpage -->
 </head>
 
 <body>
@@ -34,13 +42,29 @@
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Contact</h2> <!-- Heading for contact -->
+            <h2 class="title">House Flipper</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore itaque corporis! Eum eaque modi velit, maiores odio placeat magnam! 
-                Debitis quidem veritatis architecto, consectetur quia esse officia ut distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad voluptatibus
-                 voluptatum sed architecto explicabo? Praesentium eum nesciunt possimus facere sit! Deleniti, tempore? Harum ratione illo nihil nostrum, ea earum. Culpa? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit dignissimos molestiae enim delectus temporibus corporis. Molestias adipisci quasi doloribus
-                 delectus, explicabo fugit earum aperiam perferendis veniam aliquam eaque in!</p>
+                <div class="info">
+                    <p><b>Release year:</b> 2018</p>
+                    <p><b>Publisher:</b><a href="https://frozendistrict.com/"> Frozen District</a></p>
+                    <p><b>Genre:</b> simulation, indie</p>
+                    <p><b>Rate(Steam):</b> 9/10</p>
+                </div>
+                <article><!-- Article containing text -->
+                    "House Flipper" is a popular simulation video game that taps into the thrill of renovation and real
+                    estate management. Developed by Empyrean and released by PlayWay S.A., the game allows players to
+                    buy, renovate, and sell houses for profit. Players perform a range of tasks from simple cleaning and
+                    painting to complete overhauls involving demolition and rebuilding. The game offers a detailed,
+                    hands-on approach to home improvement and design, where each choice can affect the sale price. It
+                    also features a variety of tools and materials, making each project unique and challenging. "House
+                    Flipper" appeals to those who enjoy creativity and strategy, offering a satisfying visual and
+                    financial payoff as players transform dilapidated properties into beautiful homes.
+                </article>
+            </div>
+            <div class="images">
+                <img src="HFicon.jpg" alt="icon">
+                <img src="HFp1.jpg" alt="picture1">
+                <img src="HFp2.jpg" alt="picture2">
             </div>
         </div>
         <div class="ad2"> <!-- Advertisement section 2 -->
@@ -48,7 +72,6 @@
         </div>
     </main>
 
-    
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
             <h2>Spon</h2> <!-- Sponsor heading -->
@@ -61,6 +84,7 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
+
 </body>
 
 </html>
