--- a/LayersOfFear.html
+++ b/LayersOfFear.html
@@ -1,9 +1,17 @@
+<!--Firuza Rahimova 20050141056
+https://firagimova.github.io/GameScope/index.html
+
+Murat Ergin 18050111038
+https://muratterginn.github.io/GameScope/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
+    <title>Layers of Fear</title> <!-- Title of the webpage -->
 </head>
 
 <body>
@@ -34,13 +42,30 @@
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Contact</h2> <!-- Heading for contact -->
+            <h2 class="title">Layers of Fear</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore itaque corporis! Eum eaque modi velit, maiores odio placeat magnam! 
-                Debitis quidem veritatis architecto, consectetur quia esse officia ut distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad voluptatibus
-                 voluptatum sed architecto explicabo? Praesentium eum nesciunt possimus facere sit! Deleniti, tempore? Harum ratione illo nihil nostrum, ea earum. Culpa? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit dignissimos molestiae enim delectus temporibus corporis. Molestias adipisci quasi doloribus
-                 delectus, explicabo fugit earum aperiam perferendis veniam aliquam eaque in!</p>
+                <div class="info">
+                    <p><b>Release year:</b> 2016</p>
+                    <p><b>Publisher:</b><a href="https://www.blooberteam.com/"> Bloober Team</a></p>
+                    <p><b>Genre:</b> horror, indie, puzzle</p>
+                    <p><b>Rate(Steam):</b> 9/10</p>
+                </div>
+                <article><!-- Article containing text -->
+                    "Layers of Fear" is an immersive psychological horror video game developed by Bloober Team. The game
+                    plunges players into a deeply unsettling atmosphere as they navigate the ever-changing Victorian
+                    mansion of a tormented painter. With a strong focus on story and exploration, players unravel the
+                    dark and poignant narrative of the artist's past, uncovering the tragedies that have affected his
+                    psyche and manifested into the eerie, shifting environment of the mansion. The gameplay is
+                    characterized by its use of perspective and optical illusions, which play with the player's sense of
+                    reality and create a disturbingly unpredictable experience. As players delve deeper into the layers
+                    of the artist's disturbed mind, they encounter intense visual storytelling, puzzles, and a haunting
+                    soundtrack that contribute to the game's chilling and introspective horror experience.
+                </article>
+            </div>
+            <div class="images">
+                <img src="LOFicon.jpg" alt="icon">
+                <img src="LOFp1.jpg" alt="picture1">
+                <img src="LOFp2.jpg" alt="picture2">
             </div>
         </div>
         <div class="ad2"> <!-- Advertisement section 2 -->
@@ -48,7 +73,6 @@
         </div>
     </main>
 
-    
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
             <h2>Spon</h2> <!-- Sponsor heading -->
@@ -61,6 +85,7 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
+
 </body>
 
 </html>
