--- a/Shooter.html
+++ b/Shooter.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
-<head>
+<head> <!-- Head section containing metadata and links to external resources -->
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
-    <title>GameScope</title> <!-- Title of the webpage -->
+    <link rel="stylesheet" href="category.css"> <!-- Link to category-specific stylesheet -->
+    <title>Shooter</title> <!-- Title of the webpage -->
 </head>
 
-<body>
-    <header> <!-- Header section -->
+<body> <!-- Body section of the webpage -->
+    <header> <!-- Header section containing website name and slogan -->
         <div class="name"> <!-- Division for website name and slogan -->
             <h1>GameScope</h1> <!-- Main heading of the website -->
             <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b></p> <!-- Slogan -->
@@ -19,7 +20,7 @@
             <a href="index.html">Home</a> <!-- Link to home page -->
         </div>
         <div class="categories"> <!-- Categories link -->
-            <a href="RolePlaying.html">Categories</a> <!-- Link to categories page -->
+            <a href="RolePlaying.html">Categories</a> <!-- Placeholder link to categories page -->
         </div>
         <div class="about"> <!-- About link -->
             <a href="about.html">About</a> <!-- Link to about page -->
@@ -29,18 +30,29 @@
         </div>
     </div>
 
-    <main> <!-- Main content section -->
+    <main> <!-- Main content section of the webpage -->
         <div class="ad1"> <!-- Advertisement section 1 -->
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Contact</h2> <!-- Heading for contact -->
-            <div class="text"> <!-- Text section -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore itaque corporis! Eum eaque modi velit, maiores odio placeat magnam! 
-                Debitis quidem veritatis architecto, consectetur quia esse officia ut distinctio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad voluptatibus
-                 voluptatum sed architecto explicabo? Praesentium eum nesciunt possimus facere sit! Deleniti, tempore? Harum ratione illo nihil nostrum, ea earum. Culpa? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto velit dignissimos molestiae enim delectus temporibus corporis. Molestias adipisci quasi doloribus
-                 delectus, explicabo fugit earum aperiam perferendis veniam aliquam eaque in!</p>
+            <h2 class="title">Categories</h2> <!-- Heading for categories -->
+            <div class="innerContent"> <!-- Inner content division -->
+                <div class="list"> <!-- List of categories -->
+                    <ul>
+                        <li><a href="RolePlaying.html" class="inText">Role Playing</a></li> <!-- Link to Horror category -->
+                        <li><a href="Simulation.html" class="inText">Simulation</a></li> <!-- Link to Simulator category -->
+                        <li><a href="Horror.html" class="inText">Horror</a></li> <!-- Link to Arcade category -->
+                        <li><a href="Shooter.html" class="inText">Shooter</a></li> <!-- Link to Shooter category -->
+                </div>
+                <div class="table"> <!-- Table displaying category images -->
+                    <table>
+                        <tr>
+                            <td><a href="Doom.html"><img src="Dicon.jpg" alt="" class="imgs"></a></td> <!-- Image 1 -->
+                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
+                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
         <div class="ad2"> <!-- Advertisement section 2 -->
@@ -48,7 +60,6 @@
         </div>
     </main>
 
-    
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
             <h2>Spon</h2> <!-- Sponsor heading -->
@@ -61,6 +72,6 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
-</body>
 
+</body>
 </html>
